# packages/contracts/src/generated/openapi.json
@@ -3055,6 +3055,16 @@
           },
           "config_version": {
             "type": "string"
+          },
+          "active_run": {
+            "oneOf": [
+              {
+                "$ref": "#/components/schemas/BreakthroughRun"
+              },
+              {
+                "type": "null"
+              }
+            ]
           }
         }
       },
